--- a/src/fcf_ome_zarr/__FRACTAL_MANIFEST__.json
+++ b/src/fcf_ome_zarr/__FRACTAL_MANIFEST__.json
@@ -8,7 +8,7 @@
         "Instance Segmentation",
         "Classical segmentation"
       ],
-      "docs_info": "### Purpose\n- Description and documentation of the Task functionality\n- Bullet points that cover main features of the tasks.\n- Can use **full** *markdown* formatting (including embedding images).\n\n### Outputs\n- Optional section on what kind of outputs the task generates. For the thresholding_task: Generates a new label image named `label_name`.\n\n### Limitations\n- List known limitations of the task (e.g. only works for certain data types).",
+      "docs_info": "### Purpose\n- Segment an image using a thresholding method & size filtering.\n\n### Outputs\n- A label image\n",
       "type": "parallel",
       "executable_parallel": "threshold_segmentation_task.py",
       "meta_parallel": {
@@ -102,7 +102,7 @@
           },
           "threshold": {
             "title": "Threshold",
-            "type": "integer",
+            "type": "number",
             "description": "Threshold value to be applied."
           },
           "min_size": {
@@ -133,65 +133,67 @@
       }
     },
     {
-      "name": "Gaussian Blur",
-      "output_types": {
-        "is_blurred": true
-      },
-      "category": "Image Processing",
+      "name": "FCF S8 Converter",
+      "category": "Conversion",
       "tags": [
-        "Denoising",
-        "Gaussian Blur"
+        "FACS"
       ],
-      "docs_info": "### Purpose\n- Description and documentation of the Task functionality\n- Bullet points that cover main features of the tasks.\n- Can use **full** *markdown* formatting (including embedding images).\n\n### Outputs\n- Optional section on what kind of outputs the task generates. For the thresholding_task: Generates a new label image named `label_name`.\n\n### Limitations\n- List known limitations of the task (e.g. only works for certain data types).",
-      "type": "parallel",
-      "executable_parallel": "gaussian_blur_task.py",
-      "meta_parallel": {
+      "docs_info": "### Purpose\n- Convert data from S8 Flow Cytometer (TIFF files) to OME-Zarr format.\n\n### Outputs\n- A single mosaic OME-Zarr file containing all converted images. Optionally in plate format\n\n### Limitations\n- POC implementation, only tested on a single dataset",
+      "type": "converter_non_parallel",
+      "executable_non_parallel": "fcf_s8_converter.py",
+      "meta_non_parallel": {
         "cpus_per_task": 1,
         "mem": 4000
       },
-      "args_schema_parallel": {
+      "args_schema_non_parallel": {
         "additionalProperties": false,
         "properties": {
-          "zarr_url": {
-            "title": "Zarr Url",
+          "zarr_dir": {
+            "title": "Zarr Dir",
             "type": "string",
-            "description": "URL to the OME-Zarr container."
+            "description": "path of the directory where the new OME-Zarrs will be created. (standard argument for Fractal tasks, managed by Fractal server)."
           },
-          "output_image_suffix": {
-            "default": "gaussian_blur",
-            "title": "Output Image Suffix",
+          "tiff_folder_path": {
+            "title": "Tiff Folder Path",
             "type": "string",
-            "description": "Suffix for the output image name."
+            "description": "Path to the folder containing the TIFF files of the S8 FACS to be converted."
           },
-          "sigma_xy": {
+          "fake_a_plate": {
+            "default": true,
+            "title": "Fake A Plate",
+            "type": "boolean",
+            "description": "Whether to create a fake plate structure with a single well \"A1\" containing the mosaic image. This is useful to use some tools that need plates (e.g. Fractal feature explorer). Defaults to True."
+          },
+          "add_z_singleton": {
+            "default": true,
+            "title": "Add Z Singleton",
+            "type": "boolean",
+            "description": "Whether to add a singleton Z dimension to the OME-Zarr. This is useful to use some of the tools (like the Fractal feature explorer) that require Z singleton dimensions. Defaults to True."
+          },
+          "convert_first_x_tiffs": {
+            "title": "Convert First X Tiffs",
+            "type": "integer",
+            "description": "If provided, only the first X TIFF files in the folder are converted. This is useful for testing with a smaller number of files. If None, all TIFF files in the folder are converted."
+          },
+          "xy_pixelsize": {
             "default": 1.0,
-            "title": "Sigma Xy",
+            "title": "Xy Pixelsize",
             "type": "number",
-            "description": "Standard deviation for Gaussian kernel in the XY plane. Defaults to 1.0."
-          },
-          "sigma_z": {
-            "title": "Sigma Z",
-            "type": "number",
-            "description": "Standard deviation for Gaussian kernel in the Z direction. If None, the smoothing will be applied only in XY."
+            "description": "Pixel size in the XY dimensions. If possible, we should extract this from the metadata instead."
           },
           "overwrite": {
             "default": true,
             "title": "Overwrite",
             "type": "boolean",
-            "description": "Whether to overwrite an existing output image. Defaults to True."
-          },
-          "overwrite_input": {
-            "default": false,
-            "title": "Overwrite Input",
-            "type": "boolean",
-            "description": "If True, the task will first create a new OME-Zarr image with the Gaussian blur applied, and then overwrite the original image with the new one. Defaults to False."
+            "description": "Whether to overwrite an existing OME-Zarr image. Defaults to True."
           }
         },
         "required": [
-          "zarr_url"
+          "zarr_dir",
+          "tiff_folder_path"
         ],
         "type": "object",
-        "title": "GaussianBlurTask"
+        "title": "FcfS8Converter"
       }
     },
     {
@@ -202,7 +204,7 @@
         "Intensity",
         "Morphology"
       ],
-      "docs_info": "### Purpose\n- Description and documentation of the Task functionality\n- Bullet points that cover main features of the tasks.\n- Can use **full** *markdown* formatting (including embedding images).\n\n### Outputs\n- Optional section on what kind of outputs the task generates. For the thresholding_task: Generates a new label image named `label_name`.\n\n### Limitations\n- List known limitations of the task (e.g. only works for certain data types).",
+      "docs_info": "### Purpose\n- Makes region properties measurements on label images and stores them in the OME-Zarr format.\n\n### Outputs\n- A measurements table in the OME-Zarr format.",
       "type": "parallel",
       "executable_parallel": "region_props_features_task.py",
       "meta_parallel": {
@@ -227,6 +229,11 @@
             "title": "Output Table Name",
             "type": "string",
             "description": "Name for the output feature table."
+          },
+          "refercene_roi_table": {
+            "title": "Refercene Roi Table",
+            "type": "string",
+            "description": "Optional ROI table for reference. If provided, it is measured which ROI from this table every object centroid is in."
           },
           "overwrite": {
             "default": true,
